--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.applitools</groupId>
+            <artifactId>eyes-selenium-java3</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
     <reporting>
